--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <title>DOM 塔防卡 - 纯前端牌类塔防游戏</title>
+    <title>DOM 塔防 - 纯前端牌塔防游戏</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles.css" />
   </head>
@@ -12,16 +12,16 @@
       <div id="start-screen" class="overlay">
         <div class="overlay-content overlay-content--lean">
           <h1>DOM 塔防卡</h1>
-          <p class="start-tagline">拖塔、放卡，守住基地。</p>
+          <p class="start-tagline">放卡，守住基地。</p>
           <div class="start-actions">
             <button id="btn-start" class="btn-primary">开始游戏</button>
-            <button id="btn-toggle-help" class="btn-ghost" type="button">操作说明</button>
+
           </div>
           <div id="start-help-panel" class="start-help hidden">
             <p>点击手牌选择塔，点击战场即可放置。守住所有波次即可胜利。</p>
           </div>
           <div id="level-select" class="level-select">
-            <p class="level-select__label">選擇關卡：</p>
+            <p class="level-select__label"></p>
             <!-- 關卡按鈕將由 JS 動態生成 -->
           </div>
         </div>
@@ -62,7 +62,7 @@
       <div id="top-hud-bar">
         <div class="top-hud-section top-hud-section--hp">
           <div class="top-stat-item top-stat-item--hp">
-            <span class="top-stat-label">基地生命：</span>
+            <span class="top-stat-label">生命：</span>
             <div class="top-bar-container">
               <div id="hp-bar" class="top-bar-fill top-bar-fill--hp"></div>
             </div>
@@ -71,7 +71,7 @@
         </div>
         <div class="top-hud-section top-hud-section--info" id="top-stage-info">
           <div class="stage-info">
-            <div id="level-text" class="stage-info__level">Level --</div>
+            <div id="level-text" class="stage-info__level"></div>
             <div class="stage-info__meta">
               <span id="wave-text" class="stage-info__meta-item">Wave 0 / 0</span>
               <span class="stage-info__divider">·</span>
@@ -108,9 +108,9 @@
               <span id="bubble-enemy-types-list" class="prep-banner__types"></span>
             </div>
             <p id="bubble-description" class="prep-banner__desc">
-              敌人从顶部两侧进攻，尝试用 DIV 塔守住正面。
+              敌人从顶部两侧进攻。
             </p>
-            <div id="bubble-recommended" class="prep-banner__tips">推荐多放 DIV 塔防守正面</div>
+            <div id="bubble-recommended" class="prep-banner__tips">干就完了</div>
           </div>
           <div class="prep-banner__countdown">
             <span class="prep-banner__label">布置倒计时</span>
